@@ -13,7 +13,7 @@ set.seed(100L)
 
 lambda <- msgl.lambda.seq(x, classes, alpha = .5, d = 25L, lambda.min = 0.05, standardize = TRUE)
 
-fit.cv <- msgl.cv(x, classes, alpha = .5, lambda = lambda, standardize = TRUE, max.threads = 1L)
+fit.cv <- msgl.cv(x, classes, alpha = .5, lambda = lambda, standardize = TRUE)
 
 err.count <- colSums(fit.cv$classes != classes)
 
